<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, SMSTest!</string>
    <string name="app_name">SMSTest</string>
    <string name="vacate_msg">VACATE !</string>
    <string name="utilities_on_msg">Utilities ON !</string>
    <string name="utilities_off_msg">Utilities OFF !</string>
    <string name="all_clear_msg">All Clear !</string>
    <string name="man_down_msg">Man Down !</string>
    <string name="login_label">Choose Your Role</string>
    <string name="commander_radio_btn">Commander</string>
    <string name="responder_radio_btn">Responder</string>
    <string name="login_submit">Login !</string>
    
    <string-array name="messages_array">
        <item>Vacate</item>
        <item>Utilities ON</item>
        <item>Utilities OFF</item>
 		<item>Man Down</item> 
        <item>All Clear</item>
        <item>Write Message</item>    
    </string-array>
    
     <string-array name="contacts_array">
     	<item>4083685859</item>
        <item>4082158400</item>
        <item>4089921363</item>
    </string-array>
    
    
</resources>
